fixed legend sizing on Safari

--- a/src/components/NexusGraph/GraphView.css
+++ b/src/components/NexusGraph/GraphView.css
@@ -32,6 +32,8 @@
 .legend{
     margin-top:15px;
     background:white;
+    width: 100% !important;
+
 }
 .legend tr td, .legend thead tr th{
     text-align:center;
